dashboard/dashboard-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     k8s-app: kubernetes-dashboard
#   name: kubernetes-dashboard
#   namespace: kube-system
# spec:
#   selector:
#     k8s-app: kubernetes-dashboard
#   ports:
#   - nodePort: 31443
#     port: 443
#     targetPort: 8443
#   type: NodePort
